--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#home"><span class="glyphicon glyphicon-send"></span>Irish Lion</a>
+          <a class="navbar-brand" href="#home"></span>Irish Lion</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
