--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#about"><span class="glyphicon glyphicon-user"></span>About</a></li>
-            <li><a href="#services"><i class="icon-gear"></i>Menu</a></li>
-            <li><a href="#work"><span class="glyphicon glyphicon-briefcase"></span>Contact</a></li>
-            <li><a href="#pricing"><i class="icon-dollar"></i>Events</a></li>
-            <li><a href="#clients"><i class="icon-comments"></i>Clients</a></li>
+            <li><a href="#about"><span class="glyphicon glyphicon-book"></span>Our Story</a></li>
+            <li><a href="#services"><i class="glyphicon glyphicon-cutlery"></i>Food</a></li>
+            <li><a href="#work"><span class="glyphicon glyphicon-phone"></span>Contact</a></li>
+            <li><a href="#pricing"><i class="glyphicon glyphicon-glass"></i>Events</a></li>
+            <li><a href="#clients"><i class="glyphicon glyphicon-glass"></i>Clients</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -63,7 +63,7 @@
       <div class="fixed-container">
 
         <div class="content team">
-          <h1>Meet the Team</h1>
+          <h1>Our Story</h1>
           <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-12">
               <h2>Michael Chang</h2>
@@ -122,7 +122,7 @@
       <div class="fixed-container">
 
         <div class="content services">
-          <h1>Services</h1>
+          <h1>Menu</h1>
           <div class="row">
             <div class="empty col-md-2 col-sm-3 col-xs-12"></div>
             <div class="col-md-8 col-sm-6 col-xs-12">
@@ -231,22 +231,22 @@
       <div class="fixed-container">
 
         <div class="content">
-          <h1>Pricing Table</h1>
+          <h1>Host Your Event</h1>
 
           <div class="pricing">
             <div class="row">
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <div class="wrapper">
-                  <h3 class="text-center"><span class="glyphicon glyphicon-leaf"></span>Single Application</h3>
+                  <h3 class="text-center">Celtic Room</h3>
                   <table class="table">
                     <thead>
                       <tr><th><span class="price"><i class="icon-dollar"></i>9</span></th></tr>
                     </thead>
                     <tbody>
-                      <tr><td>One Time Installation</td></tr>
-                      <tr><td>No reselling </td></tr>
+                      <tr><td>(Upstairs Level) 280 sq. ft.</td></tr>
+                      <tr><td>Capacity 30</td></tr>
                       <tr><td>Free Email Support</td></tr>
-                      <tr><td><a class="btn" href="#">PURCHASE NOW</a></td></tr>
+                      <tr><td><a class="btn" href="#">RESERVE NOW</a></td></tr>
                     </tbody>
                   </table>
                 </div>
@@ -254,16 +254,16 @@
 
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <div class="wrapper">
-                  <h3 class="text-center"><span class="glyphicon glyphicon-send"></span>Multiple Application</h3>
+                  <h3 class="text-center">The Glen</h3>
                   <table class="table">
                     <thead>
                       <tr><th><span class="price"><i class="icon-dollar"></i>35</span></th></tr>
                     </thead>
                     <tbody>
-                      <tr><td>Multiple Installations</td></tr>
-                      <tr><td>No reselling </td></tr>
+                      <tr><td>1,600 sq. ft.</td></tr>
+                      <tr><td>Capacity 80</td></tr>
                       <tr><td>Free Email Support</td></tr>
-                      <tr><td><a class="btn" href="#">PURCHASE NOW</a></td></tr>
+                      <tr><td><a class="btn" href="#">RESERVE NOW</a></td></tr>
                     </tbody>
                   </table>
                 </div>
@@ -271,16 +271,16 @@
 
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <div class="wrapper">
-                  <h3 class="text-center"><span class="glyphicon glyphicon-plane"></span>Extended License</h3>
+                  <h3 class="text-center">Upstairs Banquet Room</h3>
                   <table class="table">
                     <thead>
                       <tr><th><span class="price"><i class="icon-dollar"></i>99</span></th></tr>
                     </thead>
                     <tbody>
-                      <tr><td>Multiple Installations</td></tr>
-                      <tr><td>Allowed to use and resell</td></tr>
+                      <tr><td>(Includes Celtic Room) 768 sq. ft</td></tr>
+                      <tr><td>Capacity 145</td></tr>
                       <tr><td>Free Email Support</td></tr>
-                      <tr><td><a class="btn" href="#">PURCHASE NOW</a></td></tr>
+                      <tr><td><a class="btn" href="#">RESERVE NOW</a></td></tr>
                     </tbody>
                   </table>
                 </div>
@@ -339,7 +339,7 @@
             <h3>links</h3>
             <ul>
               <li><a href="#">Contact</a></li>
-              <li><a href="#">About</a></li>
+              <li><a href="#">Our Story</a></li>
               <li><a href="#">Blog</a></li>
             </ul>
             <div class="clearfix"></div>
@@ -350,11 +350,10 @@
               We are a small web design company that is focused on making your vision come to life.
             </p>
             <div class="social-media">
-              <a href="#" data-toggle="tooltip" title="twitter"><i class="icon-twitter"></i></a>
-              <a href="#" data-toggle="tooltip" title="facebook"><i class="icon-facebook"></i></a>
-              <a href="#" data-toggle="tooltip" title="linkedin"><i class="icon-linkedin"></i></a>
-              <a href="#" data-toggle="tooltip" title="github"><i class="icon-github"></i></a>
-              <a href="#" data-toggle="tooltip" title="pinterest"><i class="icon-pinterest"></i></a>
+              <a href="https://twitter.com/theirishlion?lang=en" data-toggle="tooltip" title="twitter"><i class="icon-twitter"></i></a>
+              <a href="https://www.facebook.com/irishlionpub/" data-toggle="tooltip" title="facebook"><i class="icon-facebook"></i></a>
+              <a href="https://www.instagram.com/theirishlion/" data-toggle="tooltip" title="instagram"><i class="icon-instagram"></i></a>
+              <a href="https://www.pinterest.com/theirishlion/" data-toggle="tooltip" title="pinterest"><i class="icon-pinterest"></i></a>
             </div>
 
           </div>
