Changed sublogo and added font-face Celtic

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="container">
         <div class="content">
           <span class="logo glyphicon glyphicon-fire"></span>
-          <h1>Flat and Responsive Designs</h1>
+          <h1>Restaurant & Pub</h1>
           <a class="scroll-down btn" href="#about">LEARN MORE</a>
           <a class="btn" href="#">PURCHASE NOW</a><br />
           <a class="scroll-down" href="#about"><i class="icon-angle-down"></i></a>
