--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <div class="fixed-container">
         <div class="content">
 
-          <h1>Our Work</h1>
+          <h1>Contact Us</h1>
     			<!-- FILTER CONTROLS -->
 
     			<div class="controls">
