--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#about"><span class="glyphicon glyphicon-book"></span>Our Story</a></li>
-            <li><a href="#services"><i class="glyphicon glyphicon-cutlery"></i>Food</a></li>
-            <li><a href="#work"><span class="glyphicon glyphicon-phone"></span>Contact</a></li>
-            <li><a href="#pricing"><i class="glyphicon glyphicon-glass"></i>Events</a></li>
+            <li><a href="#services"><span class="glyphicon glyphicon-cutlery"></span>Food</a></li>
+            <li><a href="#about"><i class="glyphicon glyphicon-book"></i>Our Story</a></li>
+            <li><a href="#work"><span class="glyphicon glyphicon-glass"></span>Events</a></li>
+            <li><a href="#clients"><i class="glyphicon glyphicon-phone"></i>Connect</a></li>
             <li><a href="#clients"><i class="glyphicon glyphicon-glass"></i>Clients</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -44,7 +44,7 @@
     </div>
 
 
-    <!-- Features Section -->
+    <!-- Header Section -->
     <div id="home" class="section welcome">
       <img class="background" src="img/irish_lion_pub.jpg" alt="stream blurred">
       <div class="container">
@@ -58,7 +58,53 @@
       </div>
     </div><!-- /.container -->
 
-    <!-- About Section -->
+
+    <!-- Menu Section -->
+    <!--  Image background parallax -->
+    <div id="services" class="section image">
+      <div class="background parallax"></div>
+      <div class="fixed-container">
+
+        <div class="content services">
+          <h1>Menu</h1>
+          <div class="row">
+            <div class="empty col-md-2 col-sm-3 col-xs-12"></div>
+            <div class="col-md-8 col-sm-6 col-xs-12">
+              <h3>We offer services that range from Website Design to Branding. Just check out all of our services below to get a general idea of what we are capable of. We have three people on our team and we will try to accommodate your request. </h3>
+            </div>
+            <div class="empty col-md-2 col-sm-3 col-xs-12"></div>
+          </div>
+          <div class="row">
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="service-icon">
+                <i class="icon-sitemap" data-toggle="tooltip" title="Professional application planning, including mockups, wireframes, and designs."></i>
+                <span>PLANNING</span>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="service-icon">
+                <i class="icon-search" data-toggle="tooltip" title="Clean, Modern and Responsive Web Design."></i>
+                <span>DESIGN</span>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="service-icon">
+                <i class="icon-sun" data-toggle="tooltip" title="We can help create a consistent media brand including logos, product design, website branding and more."></i>
+                <span>BRANDING</span>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="service-icon">
+                <i class="icon-umbrella" data-toggle="tooltip" title="Web application security. We can help protect your application from attacks."></i>
+                <span>SECURITY</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+ <!-- Our Story Section -->
     <div id="about" class="section">
       <div class="fixed-container">
 
@@ -115,68 +161,21 @@
       </div>
     </div><!-- /.container -->
 
-    <!-- Services Section -->
-    <!--  Image background parallax -->
-    <div id="services" class="section image">
-      <div class="background parallax"></div>
-      <div class="fixed-container">
-
-        <div class="content services">
-          <h1>Menu</h1>
-          <div class="row">
-            <div class="empty col-md-2 col-sm-3 col-xs-12"></div>
-            <div class="col-md-8 col-sm-6 col-xs-12">
-              <h3>We offer services that range from Website Design to Branding. Just check out all of our services below to get a general idea of what we are capable of. We have three people on our team and we will try to accommodate your request. </h3>
-            </div>
-            <div class="empty col-md-2 col-sm-3 col-xs-12"></div>
-          </div>
-          <div class="row">
-            <div class="col-md-3 col-sm-3 col-xs-6">
-              <div class="service-icon">
-                <i class="icon-sitemap" data-toggle="tooltip" title="Professional application planning, including mockups, wireframes, and designs."></i>
-                <span>PLANNING</span>
-              </div>
-            </div>
-            <div class="col-md-3 col-sm-3 col-xs-6">
-              <div class="service-icon">
-                <i class="icon-search" data-toggle="tooltip" title="Clean, Modern and Responsive Web Design."></i>
-                <span>DESIGN</span>
-              </div>
-            </div>
-            <div class="col-md-3 col-sm-3 col-xs-6">
-              <div class="service-icon">
-                <i class="icon-sun" data-toggle="tooltip" title="We can help create a consistent media brand including logos, product design, website branding and more."></i>
-                <span>BRANDING</span>
-              </div>
-            </div>
-            <div class="col-md-3 col-sm-3 col-xs-6">
-              <div class="service-icon">
-                <i class="icon-umbrella" data-toggle="tooltip" title="Web application security. We can help protect your application from attacks."></i>
-                <span>SECURITY</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    <!-- Portfolio Section -->
+    <!-- Events Section -->
     <!--  On smaller devices, portfolio becomes auto height and no fixed -->
 
     <div id="work" class="section white">
       <div class="fixed-container">
         <div class="content">
 
-          <h1>Contact Us</h1>
+          <h1>Host Your Event</h1>
     			<!-- FILTER CONTROLS -->
 
     			<div class="controls">
   				  <a class="btn filter" data-filter="all">SHOW ALL</a>
-  				  <a class="btn filter" data-filter="category_1">CATEGORY 1</a>
-  				  <a class="btn filter" data-filter="category_2">CATEGORY 2</a>
-  				  <a class="btn filter" data-filter="category_3">CATEGORY 3</a>
-  				  <a class="btn filter" data-filter="category_1 category_3">CATEGORY 1 &amp; 3</a>
+  				  <a class="btn filter" data-filter="category_1">The Glen</a>
+  				  <a class="btn filter" data-filter="category_2">The Celtic Room</a>
+  				  <a class="btn filter" data-filter="category_1 category_3">The Celtic Room &amp; Banquet Hall</a>
     			</div>
 
     		</div>
