Adds header image logo and timeline

--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
       <img class="background" src="img/irish_lion_pub.jpg" alt="stream blurred">
       <div class="container">
         <div class="content">
-          <span class="logo glyphicon glyphicon-fire"></span>
-          <h1>Restaurant & Pub</h1>
-          <a class="scroll-down btn" href="#about">LEARN MORE</a>
-          <a class="btn" href="#">PURCHASE NOW</a><br />
+          <img class="logo" src="./logo.svg"/>
+          <div class="social-media">
+            <a href="https://twitter.com/theirishlion?lang=en" data-toggle="tooltip" title="twitter"><i class="icon-twitter"></i></a>
+            <a href="https://www.facebook.com/irishlionpub/" data-toggle="tooltip" title="facebook"><i class="icon-facebook"></i></a>
+            <a href="https://www.instagram.com/theirishlion/" data-toggle="tooltip" title="instagram"><i class="icon-instagram"></i></a>
+            <a href="https://www.pinterest.com/theirishlion/" data-toggle="tooltip" title="pinterest"><i class="icon-pinterest"></i></a>
+          </div>
           <a class="scroll-down" href="#about"><i class="icon-angle-down"></i></a>
         </div><!-- /.content -->
       </div>
@@ -105,61 +108,86 @@
     </div>
 
  <!-- Our Story Section -->
-    <div id="about" class="section">
-      <div class="fixed-container">
+ <div id="about" class="section">
+   <div class="fixed-container">
 
-        <div class="content team">
-          <h1>Our Story</h1>
-          <div class="row">
-            <div class="col-md-4 col-sm-4 col-xs-12">
-              <h2>Michael Chang</h2>
-              <h3 class="italic">Developer</h3>
-              <div class="portrait">
-                <img src="img/portrait2.jpg" alt="Team Portrait">
-              </div>
-              <p>Hi, I'm Michael Chang. I am a developer who specializes on CSS, HTML and Javascript. I'm excited to work more and learn more about design.</p>
-              <div class="social-media">
-                <a href="#" data-toggle="tooltip" title="twitter"><i class="icon-twitter"></i></a>
-                <a href="#" data-toggle="tooltip" title="facebook"><i class="icon-facebook"></i></a>
-                <a href="#" data-toggle="tooltip" title="linkedin"><i class="icon-linkedin"></i></a>
-                <a href="#" data-toggle="tooltip" title="github"><i class="icon-github"></i></a>
-                <a href="#" data-toggle="tooltip" title="pinterest"><i class="icon-pinterest"></i></a>
-              </div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-12">
-              <h2>Jane Doe</h2>
-              <h3 class="italic">Founder</h3>
-              <div class="portrait">
-                <img src="img/portrait1.jpg" alt="Team Portrait">
-              </div>
-              <p>I am Jane Doe, a web designer who loves designing and building websites. I founded this company to help bring web design to those who need it.</p>
-              <div class="social-media">
-                <a href="#" data-toggle="tooltip" title="twitter"><i class="icon-twitter"></i></a>
-                <a href="#" data-toggle="tooltip" title="facebook"><i class="icon-facebook"></i></a>
-                <a href="#" data-toggle="tooltip" title="linkedin"><i class="icon-linkedin"></i></a>
-                <a href="#" data-toggle="tooltip" title="github"><i class="icon-github"></i></a>
-                <a href="#" data-toggle="tooltip" title="pinterest"><i class="icon-pinterest"></i></a>
-              </div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-12">
-              <h2>Jessica Smith</h2>
-              <h3 class="italic">Graphic Designer</h3>
-              <div class="portrait">
-                <img src="img/portrait3.jpg" alt="Team Portrait">
-              </div>
-              <p>My name is Jessica Smith. I work mainly as a graphic designer, designing beautiful web elements, buttons, backgrounds, and really anything that is needed.</p>
-              <div class="social-media">
-                <a href="#" data-toggle="tooltip" title="twitter"><i class="icon-twitter"></i></a>
-                <a href="#" data-toggle="tooltip" title="facebook"><i class="icon-facebook"></i></a>
-                <a href="#" data-toggle="tooltip" title="linkedin"><i class="icon-linkedin"></i></a>
-                <a href="#" data-toggle="tooltip" title="github"><i class="icon-github"></i></a>
-                <a href="#" data-toggle="tooltip" title="pinterest"><i class="icon-pinterest"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div><!-- /.container -->
+     <div class="content team">
+       <h1>Our Story</h1>
+                 <h3 class="section-subheading text-muted">Effigy vessels featuring human or animal features are one of the hallmarks of the Mississippian culture that flourished in the Southeastern and Midwestern United States between approximately 1000 to 1500 ACE. Effigy elements were often applied or modeled on all sides of a vessel, including the rim and base. Although many types of artifacts could benefit from 3D modeling, the ability to view effigy vessels in a 3D environment is particularly useful for this reason. These models would be useful for academic research, public outreach, and to provide a baseline for future conservation assessments of the physical artifact. </h3>
+             </div>
+         </div>
+         <div class="row">
+             <div class="col-lg-12">
+                 <ul class="timeline">
+                     <li>
+                         <div class="timeline-image">
+                             <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                         </div>
+                         <div class="timeline-panel">
+                             <div class="timeline-heading">
+                                 <h4>2009-2011</h4>
+                                 <h4 class="subheading">Our Humble Beginnings</h4>
+                             </div>
+                             <div class="timeline-body">
+                                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                             </div>
+                         </div>
+                     </li>
+                     <li class="timeline-inverted">
+                         <div class="timeline-image">
+                             <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                         </div>
+                         <div class="timeline-panel">
+                             <div class="timeline-heading">
+                                 <h4>March 2011</h4>
+                                 <h4 class="subheading">An Agency is Born</h4>
+                             </div>
+                             <div class="timeline-body">
+                                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                             </div>
+                         </div>
+                     </li>
+                     <li>
+                         <div class="timeline-image">
+                             <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                         </div>
+                         <div class="timeline-panel">
+                             <div class="timeline-heading">
+                                 <h4>December 2012</h4>
+                                 <h4 class="subheading">Transition to Full Service</h4>
+                             </div>
+                             <div class="timeline-body">
+                                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                             </div>
+                         </div>
+                     </li>
+                     <li class="timeline-inverted">
+                         <div class="timeline-image">
+                             <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                         </div>
+                         <div class="timeline-panel">
+                             <div class="timeline-heading">
+                                 <h4>July 2014</h4>
+                                 <h4 class="subheading">Phase Two Expansion</h4>
+                             </div>
+                             <div class="timeline-body">
+                                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                             </div>
+                         </div>
+                     </li>
+                     <li class="timeline-inverted">
+                         <div class="timeline-image">
+                             <h4>Be Part
+                                 <br>Of Our
+                                 <br>Story!</h4>
+                         </div>
+                     </li>
+                 </ul>
+             </div>
+         </div>
+     </div>
+ </section>
+<!-- /.container -->
 
     <!-- Events Section -->
     <!--  On smaller devices, portfolio becomes auto height and no fixed -->
