edits notes in CSS and index, changes reserve event space modal

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- Header Section -->
     <div id="home" class="section welcome">
-      <img class="background" src="img/irish_lion_pub.jpg" alt="stream blurred">
+      <img class="background" src="img/irish_lion_pub.jpg" alt="Irish Lion blurred">
       <div class="container">
         <div class="content">
           <img class="logo" src="./logo.svg"/>
@@ -56,7 +56,7 @@
             <a href="https://www.instagram.com/theirishlion/" data-toggle="tooltip" title="instagram"><i class="icon-instagram"></i></a>
             <a href="https://www.pinterest.com/theirishlion/" data-toggle="tooltip" title="pinterest"><i class="icon-pinterest"></i></a>
           </div>
-          <a class="scroll-down" href="#about"><i class="icon-angle-down"></i></a>
+          <a class="scroll-down" href="#services"><i class="icon-angle-down"></i></a>
         </div><!-- /.content -->
       </div>
     </div><!-- /.container -->
@@ -191,7 +191,6 @@
 
     <!-- Events Section -->
     <!--  On smaller devices, portfolio becomes auto height and no fixed -->
-
     <div id="work" class="section white">
       <div class="fixed-container">
         <div class="content">
@@ -253,7 +252,7 @@
     </div><!-- /.container -->
 
 
-    <!-- Pricing Section -->
+    <!-- Reserve Event Space Section -->
     <div id="pricing" class="section white">
       <div class="fixed-container">
 
@@ -272,40 +271,6 @@
                     <tbody>
                       <tr><td>(Upstairs Level) 280 sq. ft.</td></tr>
                       <tr><td>Capacity 30</td></tr>
-                      <tr><td>Free Email Support</td></tr>
-                      <tr><td><a class="btn" href="#">RESERVE NOW</a></td></tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-
-              <div class="col-md-4 col-sm-4 col-xs-12">
-                <div class="wrapper">
-                  <h3 class="text-center">The Glen</h3>
-                  <table class="table">
-                    <thead>
-                      <tr><th><span class="price"><i class="icon-dollar"></i>35</span></th></tr>
-                    </thead>
-                    <tbody>
-                      <tr><td>1,600 sq. ft.</td></tr>
-                      <tr><td>Capacity 80</td></tr>
-                      <tr><td>Free Email Support</td></tr>
-                      <tr><td><a class="btn" href="#">RESERVE NOW</a></td></tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-
-              <div class="col-md-4 col-sm-4 col-xs-12">
-                <div class="wrapper">
-                  <h3 class="text-center">Upstairs Banquet Room</h3>
-                  <table class="table">
-                    <thead>
-                      <tr><th><span class="price"><i class="icon-dollar"></i>99</span></th></tr>
-                    </thead>
-                    <tbody>
-                      <tr><td>(Includes Celtic Room) 768 sq. ft</td></tr>
-                      <tr><td>Capacity 145</td></tr>
                       <tr><td>Free Email Support</td></tr>
                       <tr><td><a class="btn" href="#">RESERVE NOW</a></td></tr>
                     </tbody>
