--- a/index.html
+++ b/index.html
@@ -107,12 +107,13 @@
     </div>
 
  <!-- Our Story Section -->
+<section> 
  <div id="about" class="section">
    <div class="fixed-container">
 
      <div class="content team">
        <h1>Our Story</h1>
-                 <h3 class="section-subheading text-muted">Effigy vessels featuring human or animal features are one of the hallmarks of the Mississippian culture that flourished in the Southeastern and Midwestern United States between approximately 1000 to 1500 ACE. Effigy elements were often applied or modeled on all sides of a vessel, including the rim and base. Although many types of artifacts could benefit from 3D modeling, the ability to view effigy vessels in a 3D environment is particularly useful for this reason. These models would be useful for academic research, public outreach, and to provide a baseline for future conservation assessments of the physical artifact. </h3>
+                 <h3 class="section-subheading text-muted">An Overview of the Irish Lion?</h3>
              </div>
          </div>
          <div class="row">
@@ -124,11 +125,11 @@
                          </div>
                          <div class="timeline-panel">
                              <div class="timeline-heading">
-                                 <h4>2009-2011</h4>
+                                 <h4>Established in 1882</h4>
                                  <h4 class="subheading">Our Humble Beginnings</h4>
                              </div>
                              <div class="timeline-body">
-                                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                 <p class="text-muted">The Irish Lion Restaurant & Pub building was designed and used as a pub & Inn in 1882. The building was originally a bar and a hotel in the late 1800s. Mr. Zimri McCollough, an early settler of the county and the builder of the Irish Lion, played an active role in all affairs affecting the welfare of the community, and he was held in high esteem among his associates. In business, he was successful, having been a livery man most of his adult life. He constructed the current building to cater to the public and passengers of the former Monon Train Depot across the street. The Worley Tavern and the Hotel Bundy European opened upstairs. In the following 96 years, the main level has been predominantly a tavern with billiard tables, in addition to providing lunch and tobacco products; however the onset of Prohibition changed the business’s emphasis to only billiards and tobacco. Mr. Lovel Burch ran the main level for most of the building’s early history up to his death in 1935. A painted mural, advertising "Lovel Burch Hotel Bundy European," was located on the east side of the building. It has since weathered away and only some fragments of a “Mail Pouch Tobacco” advertisement, added much later remain. One of the more memorable of the hotel’s services was the availability of not only a bed for the weary traveler, but a companion for the evening, if so desired.</p>
                              </div>
                          </div>
                      </li>
@@ -138,11 +139,11 @@
                          </div>
                          <div class="timeline-panel">
                              <div class="timeline-heading">
-                                 <h4>March 2011</h4>
-                                 <h4 class="subheading">An Agency is Born</h4>
+                                 <h4>1957-1982</h4>
+                                 <h4 class="subheading">A Time of Transition</h4>
                              </div>
                              <div class="timeline-body">
-                                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                 <p class="text-muted">From 1935 to 1957, an array of taverns and billiard establishments came and went—a dark era for the building, as some customers from that time told us, some with fatal results. From 1957 to 1968, the main level housed Hinkle’s Lunch Restaurant and the upstairs was vacant. In 1969, The Kirkwood Bar occupied the main level. It closed its doors in 1978. In 1979, after a brief vacancy, the McConnaughy family purchased the building and embarked upon what would turn out to be an extensive restoration process, utilizing local antique building materials supplied by Connaught Antiques. The present Irish Lion Restaurant and Pub opened its doors in 1982.</p>
                              </div>
                          </div>
                      </li>
@@ -152,11 +153,11 @@
                          </div>
                          <div class="timeline-panel">
                              <div class="timeline-heading">
-                                 <h4>December 2012</h4>
-                                 <h4 class="subheading">Transition to Full Service</h4>
+                                 <h4>Pre-Modern Era</h4>
+                                 <h4 class="subheading">The Building</h4>
                              </div>
                              <div class="timeline-body">
-                                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                 <p class="text-muted">In 1882, Bloomington had no gas lines, water lines or electricity; the ceiling in the pub area was originally covered with embossed wallpaper and had hanging kerosene lights. Gas arrived around 1900, at which time the metal ceilings and gaslights were installed. The metal ceilings were decorative, attempting to mimic plaster ceilings of the day, but they were not installed in buildings primarily for decoration; but rather, to create a fire barrier for the hanging gaslight fixtures. The diamond-shaped panels running along the center of the ceiling indicate where the main fixtures were mounted. One can see the ends of two of these gas tubes protruding out of the ceiling in the foyer.</p>
                              </div>
                          </div>
                      </li>
@@ -166,11 +167,34 @@
                          </div>
                          <div class="timeline-panel">
                              <div class="timeline-heading">
-                                 <h4>July 2014</h4>
-                                 <h4 class="subheading">Phase Two Expansion</h4>
+                                 <h4 class="subheading">The Buidling</h4>
                              </div>
                              <div class="timeline-body">
-                                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                 <p class="text-muted">The mahogany back bar in the main pub is made by Brunswick, the well-known manufacturer of billiard tables. This style was made from the late 1860s to the 1880s. At present, only three other examples are known, located in Paso Robles, CA, Brookings, SD, and downtown Denver, CO. The back bar was previously located in a pub in Indianapolis, at the corner of East St. and Washington. The oak back bar, located upstairs, dates from circa 1910 and originally came from Rushville, Indiana. There are two sections of the downstairs front. The base of the bar with the scrolled areas came from Vincennes, Indiana and dates to the 1850s. The bar top and two end sections came from English, Indiana and were made later, around 1880. Once used as a woodwork bench, the top of the bar still contains some visible drill bit marks.</p>
+                             </div>
+                         </div>
+                         <div class="timeline-panel">
+                             <div class="timeline-heading">
+                                 <h4 class="subheading">The Building</h4>
+                             </div>
+                             <div class="timeline-body">
+                                 <p class="text-muted">The upstairs of the Irish Lion originally had a separate entrance in the front. A wall ran from the front vestibule, which we now use as the entrance, and then along the stairs from the main floor. When one stands at the top of the stairs, the path to the rear of the building is on the left, having once served as the hotel’s hallway, with the rooms located on the right. A wooden molding on the ceiling shows where the wall used to be. Instead of central heating, each of these rooms had a wood stove. One may notice that along the wall with the windows, there are protruding areas, with a circular disk covering a hole, where a stovepipe once entered the chimney. The chimney tops remain visible to this day. The front room, what is now called the “Celtic Room,” is unique. There are two very large sliding doors built into the wall that were closed for privacy. The doors remain, although the tracks from which they hang do not function. Some believe that this was the “House Madam” room.</p>
+                             </div>
+                         </div>
+                         <div class="timeline-panel">
+                             <div class="timeline-heading">
+                                 <h4 class="subheading">The Building</h4>
+                             </div>
+                             <div class="timeline-body">
+                                 <p class="text-muted">The building was originally 80 feet long with a 53-foot courtyard. The courtyard contained a large water cistern with a 22 by 15-foot icehouse to the rear. Although the water cistern has since been filled, the icehouse structure remains. It is four bricks thick with an air space in the center, and it had a hayloft above for insulation. We take advantage of this quality of construction today by using the same area, with a modern walk-in installed inside, for refrigeration. The courtyard was bricked in and is now used as the kitchen. Brick sidewalks with limestone curbstones were part of the original building’s design, although the curbstones have since given way to concrete. The curbstones were made in the local stone mills, of which Bloomington had many. The bricks were likely from Bloomfield and looked similar to the embossed brick on the Irish Lion’s front sidewalk. It was rescued by Sheaghan McConnaughy during the latest improvements made to the sidewalks and street on Kirkwood. The sidewalk, alley and Kirkwood Avenue sat at lower ground level in the 1880s. This is evidenced by the fact that the bottoms of the alley side doors are level with the alley. They had steps, but these are buried under the modern asphalt. The rainwater drained toward the rear of the building, through a channel in the center of the brick alley, and then into the perpendicular alley. Today, rainwater flows in the opposite direction, toward Kirwood Avenue.</p>
+                             </div>
+                         </div>
+                         <div class="timeline-panel">
+                             <div class="timeline-heading">
+                                 <h4 class="subheading">The Restoration of the Irish Lion</h4>
+                             </div>
+                             <div class="timeline-body">
+                                 <p class="text-muted">The decorative double doors and the surrounding woodwork at the front entrance are original to the building. The stained glass of that same period was acquired in Indianapolis, having been added in 1982. The woodwork on the main floor is mostly oak while the upstairs is American Gumwood. The decorative wall tile in the vestibule is original and was duplicated on the other side. It fell victim to vandalism during restoration but now contains some vintage replacement tiles. The original floor downstairs was made from “tongue and groove” American Gumwood planks. Typically, the crawlspace under the floor had aeration wells running from the front to the rear of the building. When the city put in all concrete sidewalks, they were unfortunately much higher than the original brick sidewalks. The air wells were blocked off, leading to a buildup of humidity that rotted the floor joists. Subsequently, a concrete slab over which a parquet tile floor was then installed replaced the floor.</p>
                              </div>
                          </div>
                      </li>
