--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 
                   <div class="container">
                         
-                        <button type="button" class="btn " data-toggle="collapse" data-target="#demo">contact us</button>
+                        <button type="button" class="btn tab-pane fade in" data-toggle="collapse" data-target="#demo">contact us</button>
                   </div>
                   
                           <div id="demo" class="collapse">
