adds menu pdf in food section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="fixed-container">
 
         <div class="content services">
-          <a href="menu.pdf"><h1>Menu</h1></a>
+          <a href="Menu.pdf"><h1>Menu</h1></a>
           <div class="row">
             <div class="empty col-md-2 col-sm-3 col-xs-12"></div>
             <div class="col-md-8 col-sm-6 col-xs-12">
