adds takeout menu to food section

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Full Bar &amp; Wine List"></i>
 Find us here!</a>
       <p></p>
       <p style="color:yellow;">Call us here : 812-336-9076</p>
-      <a href="deliverMenu"><i class="fa fa-bars" aria-hidden="true"></i>
+      <a href="deliveryMenu.pdf"><i class="fa fa-bars" aria-hidden="true"></i>
 To Go Menu</a>
       </div>
       
