changes FAQ form

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@ To Go Menu</a>
                   <div class="container">
 
                         
-                        <a  href="#demo" data-toggle="collapse" data-target="#demo">contact us</a>
+                        <a  href="#demo" data-toggle="collapse" data-target="#demo">Ask us</a>
 
                   </div>
 
