--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="row">
             <div class="col-md-3 col-sm-3 col-xs-6">
               <div class="service-icon">
-                <a href="#delivery" data-toggle="modal" href="#myModal"><i class="fa fa-clock-o" aria-hidden="true" data-toggle="tooltip" title="Brunch :11 am- 2 pm Sundays
+                <a href="#delivery" data-toggle="modal" ><i class="fa fa-clock-o" aria-hidden="true" data-toggle="tooltip" title="Brunch :11 am- 2 pm Sundays
  
                                                             Lunch :11am-4pm Mon-Sat
                                                              
@@ -94,7 +94,7 @@
             </div>
             <div class="col-md-3 col-sm-3 col-xs-6">
               <div class="service-icon">
-                <a href="#vegan" data-toggle="modal" href="#myModal"><i class="fa fa-leaf" aria-hidden="true" data-toggle="tooltip" title="Special vegan friendly delicacies "></i></a>
+                <a href="#vegan" data-toggle="modal" ><i class="fa fa-leaf" aria-hidden="true" data-toggle="tooltip" title="Special vegan friendly delicacies "></i></a>
                 <span>VEGAN</span>
               </div>
             </div>
@@ -123,7 +123,7 @@ Full Bar &amp; Wine List"></i>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h2 class="modal-title" id="myModalLabel">Vegan Menu</h2>
+        <h2 class="modal-title">Vegan Menu</h2>
       </div>
       <div class="modal-body"  >
         <h2>Starters</h2>
@@ -131,7 +131,7 @@ Full Bar &amp; Wine List"></i>
 <p>Imported Brie served with our house made soda bread, grapes &amp;apple wedges.</p>
 <p style="color:yellow;">Baked Potato Skins</p>
 <p>Topped with melted cheese. Served with scallions and a side of sour cream. Option: Add bacon.</p>
-<p style="color:yellow;">Deep-Fried Zucchini or Onion Rings or Mushrooms or Pickles</strong></p>
+<p style="color:yellow;">Deep-Fried Zucchini or Onion Rings or Mushrooms or Pickles</p>
 <p>Freshly cut, dipped in our special house batter and deep-fried. Served with a side of sour cream.</p>
 <p style="color:yellow;">Mixed Deep Fried Vegetable Platter</p>
 <p>Zucchini, onion rings, mushrooms &amp; pickles. Battered&amp; deep-friend with a side of sour cream.</p>
@@ -172,7 +172,7 @@ Full Bar &amp; Wine List"></i>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h2 class="modal-title" id="myModalLabel">Delivery</h2>
+        <h2 class="modal-title" >Delivery</h2>
       </div>
       <div class="modal-body"  >
       <a href="https://btownmenus.com/restaurants/irish-lion-c182/delivery"><i class="fa fa-hand-o-right" aria-hidden="true"></i>
