--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#home"></span>Irish Lion</a>
+          <a class="navbar-brand" href="#home"></span><img src="./img/brand.png" style="margin-bottom: 5px"></a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -44,10 +44,11 @@
 
     <!-- Header Section -->
     <div id="home" class="section welcome">
-      <img class="background" src="img/irish_lion_pub.jpg" alt="Irish Lion blurred">
+      <img class="background" src="img/irish_lion_historic-darker.jpg" alt="Irish Lion blurred">
       <div class="container">
         <div class="content">
-          <img class="logo" src="./irishLion-logo.svg"/>
+          <img class="logo" src="./irishLion-logo-est.svg"/>
+          <hr>
           <div class="social-media">
             <a href="https://twitter.com/theirishlion?lang=en" data-toggle="tooltip" title="twitter"><i class="icon-twitter"></i></a>
             <a href="https://www.facebook.com/irishlionpub/" data-toggle="tooltip" title="facebook"><i class="icon-facebook"></i></a>
