updates landing page menu/image responsive

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body data-spy="scroll" data-target="#navbar" data-offset="70">
-    <div id="navbar" class="navbar navbar-inverse">
+    <div id="navbar" class="navbar navbar-inverse navbar-fixed-top">
       <div class="fixed-container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#home"></span><img src="./img/brand.png" style="margin-bottom: 5px"></a>
+          <a class="navbar-brand" href="#home"></span>The Irish Lion Restaurant & Bar</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -39,6 +39,14 @@
             <li><a href="#work"><span class="glyphicon glyphicon-glass"></span>Events</a></li>
             <li><a href="#clients"><i class="glyphicon glyphicon-phone"></i>Connect</a></li>
           </ul>
+            <div class="navbar-right">
+                <ul class="nav navbar-nav">
+                    <li><a href="https://twitter.com/theirishlion?lang=en" data-toggle="tooltip" title="twitter"><i class="icon-twitter"></i></a></li>
+                    <li><a href="https://www.facebook.com/irishlionpub/" data-toggle="tooltip" title="facebook"><i class="icon-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com/theirishlion/" data-toggle="tooltip" title="instagram"><i class="icon-instagram"></i></a></li>
+                    <li><a href="https://www.pinterest.com/theirishlion/" data-toggle="tooltip" title="pinterest"><i class="icon-pinterest"></i></a></li>
+                </ul>
+            </div>
         </div><!--/.nav-collapse -->
       </div>
     </div>
@@ -46,24 +54,18 @@
 
     <!-- Header Section -->
     <div id="home" class="section welcome">
-      <img class="background" src="img/irish_lion_historic-darker.jpg" alt="Irish Lion blurred">
+      <!--<img class="background" src="img/irish_lion_historic-darker.jpg" alt="Historical Photo of Irish Lion">-->
       <div class="container">
         <div class="content">
           <img class="logo" src="./irishLion-logo-est.svg"/>
             <hr id="front">
             <div class="container-fluid ">
 	            <div class="hero">
-		            <div class="hero_heading text-center">
-		               <h1>212 West Kirkwood Avenue<br>Bloomington, Indiana<br>812-336-9076​</h1>
+		            <div class="hero_heading text-center address">
+		               <p>212 West Kirkwood Avenue<br>Bloomington, Indiana<br>812-336-9076​</p>
 		            </div>
 	           </div>
             </div>
-          <div class="social-media">
-            <a href="https://twitter.com/theirishlion?lang=en" data-toggle="tooltip" title="twitter"><i class="icon-twitter"></i></a>
-            <a href="https://www.facebook.com/irishlionpub/" data-toggle="tooltip" title="facebook"><i class="icon-facebook"></i></a>
-            <a href="https://www.instagram.com/theirishlion/" data-toggle="tooltip" title="instagram"><i class="icon-instagram"></i></a>
-            <a href="https://www.pinterest.com/theirishlion/" data-toggle="tooltip" title="pinterest"><i class="icon-pinterest"></i></a>
-          </div>
           <a class="scroll-down" href="#services"><i class="icon-angle-down"></i></a>
         </div><!-- /.content -->
       </div>
