--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#services"><span class="glyphicon glyphicon-cutlery"></span>Food</a></li>
-            <li><a href="#about"><i class="glyphicon glyphicon-book"></i>Our Story</a></li>
-            <li><a href="#work"><span class="glyphicon glyphicon-glass"></span>Events</a></li>
-            <li><a href="#clients"><i class="glyphicon glyphicon-phone"></i>Connect</a></li>
+            <li><a href="#services">Food</a></li>
+            <li><a href="#about">Our Story</a></li>
+            <li><a href="#work">Events</a></li>
+            <li><a href="#clients">Connect</a></li>
           </ul>
             <div class="navbar-right">
                 <ul class="nav navbar-nav">
