--- a/index.html
+++ b/index.html
@@ -75,6 +75,61 @@
 
 
 <!-- Menu Section -->
+<div id="mycarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#mycarousel" data-slide-to="1"></li>
+        <li data-target="#mycarousel" data-slide-to="2"></li>
+        <li data-target="#mycarousel" data-slide-to="3"></li>
+        <li data-target="#mycarousel" data-slide-to="4"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item">
+            <img src="./img/blarneyPuffballs.jpg" data-color="lightblue" alt="Trademarked Blarney Puff Balls">
+            <div class="carousel-caption">
+                <h3>First Image</h3>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./img/irishDrinks.jpg" data-color="firebrick" alt="Irish Lion dish">
+            <div class="carousel-caption">
+                <h3>Second Image</h3>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./img/stuffedCheesepuffs.jpg" data-color="violet" alt="Third Image">
+            <div class="carousel-caption">
+                <h3>Third Image</h3>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./img/irishRueben.jpg" data-color="lightgreen" alt="Fourth Image">
+            <div class="carousel-caption">
+                <h3>Fourth Image</h3>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./img/irishGreens.jpg" data-color="tomato" alt="Fifth Image">
+            <div class="carousel-caption">
+                <h3>Fifth Image</h3>
+            </div>
+        </div>
+    </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
 <!--  Image background parallax -->
 <div id="services" class="section image">
     <div class="background parallax"></div>
