adds space between text blocks in connect, adds text box to events carousel

--- a/index.html
+++ b/index.html
@@ -463,8 +463,8 @@ Chicken Kiev</p>
 </div>
 <!-- Our Story Section -->
   <section>
-     <div class="content team">
-       <h1>Our Story</h1>
+     <div class="content story">
+       <h1 id="storyHeading">Our Story</h1>
                  <h3 class="section-subheading text-muted"></h3>
              </div>
         
@@ -620,10 +620,9 @@ Chicken Kiev</p>
 <!-- Reserve Event Space Section -->
 <div id="pricing" class="section white">
     <div class="fixed-container">
-
+        <h1>Events This Month</h1>
         <div class="content">
-            <h1>Events This Month</h1>
-            <div>
+            <div id="calendar">
             <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=jkahrs595%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FNew_York" width="800" height="600" frameborder="0" align="center" scrolling="no"></iframe>
             </div>
         </div>
@@ -768,7 +767,7 @@ Chicken Kiev</p>
             <div class="row">
                 <!---trigger modal for FAQ -->
 
-                <div class="col-sm-4 tab-pane fade in"><a class="tab" data-target="#faq" data-toggle="tab"><h2>FAQ</h2>
+                <div class="col-sm-4 tab-pane fade in opacityBg"><a class="tab" data-target="#faq" data-toggle="tab"><h2>FAQ</h2>
 
                     <div class="container">
 
@@ -970,7 +969,7 @@ Chicken Kiev</p>
                 </div>
 
 
-                <div class="col-sm-4 tab-pane fade in"><a class="tab" data-target="#employment" data-toggle="tab"><h2>
+                <div class="col-sm-4 tab-pane fade in opacityBg"><a class="tab" data-target="#employment" data-toggle="tab"><h2>
                     Employment</h2><a href="js/form.html">Apply Online</a></a>
 
 
@@ -986,7 +985,7 @@ Chicken Kiev</p>
                     </p>
                 </div>
 
-                <div class="col-sm-4 tab-pane fade in"><a class="tab" data-target="#contact" data-toggle="tab"><h2>
+                <div class="col-sm-4 tab-pane fade in opacityBg"><a class="tab" data-target="#contact" data-toggle="tab"><h2>
                     Contact</h2></a>
                     <p>The Irish Lion Restaurant & Pub</p>
                     <p>212 West Kirkwood Avenue</p>
