--- a/index.html
+++ b/index.html
@@ -907,28 +907,23 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-4 tab-pane fade in"> Name:</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" placeholder="first last">
+                                    <input type="text" class="form-control" aria-describedby="name-format" required aria-required=”true” placeholder="first last">
                                 </div>
                             </div>
 
                             <div class="form-group tab-pane fade in">
-                                <label class="control-label col-sm-4 ">Email:</label>
+                                <label class="control-label col-sm-4 " >Email:</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" placeholder="someone@example.com">
+                                    <input type="email" class="form-control" required placeholder="someone@example.com">
                                 </div>
                             </div>
 
-                            <div class="form-group">
-                                <label class="control-label col-sm-4 tab-pane fade in">Password:</label>
-                                <div class="col-sm-10">
-                                    <input type="password" class="form-control " id="pwd" placeholder="Enter password">
-                                </div>
-                            </div>
+                            
 
                             <div class="form-group">
-                                <label for="comment" class="control-label col-sm-6 tab-pane fade in">Message:</label>
+                                <label for="comment" class="control-label col-sm-6 tab-pane fade in" >Message:</label>
 
-                                <textarea class="form-control" rows="3" id="comment" placeholder="Message:"></textarea>
+                                <textarea class="form-control" rows="3" id="comment" min="1" max="20" placeholder="Message:"></textarea>
 
                             </div>
 
