fixes Celtic photo

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="./img/celticRoom.jpg" height="933" width="1600" alt="...">
+            <img src="img/celticroom.jpg" height="933" width="1600" alt="...">
             <div class="carousel-caption">
                 <h2>Celtic Room</h2>
                 <p>Celtic Room (Upstairs Level) 280 sq. ft. Semi-private room. Capacity 30.</p>
